<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">协同办公</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="rememberpass">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="login">登录</string>
    <string name="copyright">Copyright&#169;南京维度软件有限公司维度</string>
    <string name="back">返回</string>
    <string name="work">待办</string>
    <string name="choice1">未办理</string>
    <string name="choice2">已办理</string>
    <string name="choice3">已委托</string>
    <string name="spinner_promat">选择表单类型</string>
    <string name="spinner_choseNextStep">选择下一步骤</string>
    <string name="spinner_comment">请选择</string>
    <string name="transaction">办理</string>
    <string name="entrust">委托</string>
    <string name="sequence">流水号</string>
    <string name="originator">发起人</string>
    <string name="state">状态</string>
    <string name="formtype">表单类型</string>
    <string name="workname">工作名称/文号</string>
    <string name="time">发布时间</string>
    <string name="towho">委托人</string>
    <string name="no">序号</string>
    <string name="comment">常用审批批注</string>
    <string name="suggestion">审批意见</string>
    <string name="agree">保存</string>
    <string name="agreeandpass">通过</string>
    <string name="disagree">驳回</string>
    <string name="newsTitle">新闻标题</string>
    <string name="newsInfo">发布时间：  发布人： 点击数：</string>
    <string name="click_to_choose">点击选择代办人</string>
    <string name="loading">加载</string>

    <!-- 刷新头标 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放后开始刷新</string>
    <string name="pull_to_refresh_refreshing_label">数据加载中，请稍后...</string>
    <string name="pull_to_refresh_tap_label">下拉刷新</string>

</resources>