<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg6"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/tabselector"
            android:gravity="center"
            android:text="@string/comment"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/comments"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:background="@drawable/spinnerselector"
            android:layoutAnimation="@anim/list_layout_anim"
            android:prompt="@string/spinner_comment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:background="@drawable/tabselector"
            android:gravity="center"
            android:text="@string/suggestion"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/suggestion"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="12dip"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:focusable="true"
            android:lines="5" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="2dip"
            android:background="@drawable/select_btn_green"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip"
            android:text="@string/agree" />
        <Button
            android:id="@+id/agreeandpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="2dip"
            android:background="@drawable/select_btn_green"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip"
            android:text="@string/agreeandpass" />

        <Button
            android:id="@+id/disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="2dip"
            android:background="@drawable/select_btn_red"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip"
            android:text="@string/disagree" />
    </LinearLayout>

</LinearLayout>