<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/launch_app"
        style="@style/shadow_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textSize="68.0sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="3dip"
            android:src="@drawable/head" />
        <!-- 表格布局，包括账号和密码 -->

        <TableLayout
            android:id="@+id/loginInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:stretchColumns="1" >

            <!-- 表格的第一行，账号文本和输入框，黑色粗体字，重心靠右，四周扩充5个像素 -->

            <TableRow
                android:layout_weight="1"
                android:gravity="center" >

                <!-- "账号"文本 -->

                <TextView
                    android:gravity="right"
                    android:padding="5dip"
                    android:text="@string/account"
                    android:textColor="#000000"
                    android:textStyle="bold" />
                <!-- "账号"输入框，文本超出TextView的宽度的情况下，出现横拉条 -->

                <EditText
                    android:id="@+id/username"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/shape_login"
                    android:scrollHorizontally="true" />
            </TableRow>
            <!-- 表格的第二行，密码和密码输入框，黑色粗体字，重心靠右，扩充5个像素 -->

            <TableRow
                android:layout_weight="1"
                android:gravity="center" >

                <!-- "密码"文本 -->

                <TextView
                    android:gravity="right"
                    android:padding="5dip"
                    android:text="@string/password"
                    android:textColor="#000000"
                    android:textStyle="bold" />
                <!-- "密码"输入框；文本超出TextView的宽度的情况下，出现横拉条 -->

                <EditText
                    android:id="@+id/password"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/shape_login"
                    android:inputType="textPassword"
                    android:scrollHorizontally="true" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="80dip"
        android:background="@drawable/tabselector"
        android:paddingBottom="3dip"
        android:paddingLeft="60dip"
        android:paddingRight="60dip"
        android:paddingTop="3dip"
        android:text="@string/login"
        android:textSize="22sp" />

    <RelativeLayout
        android:id="@+id/loginSet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip" >

        <!-- "记住密码"多选框，黑体字，左缩进5个像素，选中状态 -->

        <CheckBox
            android:id="@+id/rememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:button="@drawable/checkbox_selector"
            android:checked="true"
            android:text="@string/rememberpass"
            android:textColor="#000000" />
        <!-- "自动登录"多选框，黑体字，右缩进5个像素，与"记住密码"按钮的顶部和右边对齐 -->

        <CheckBox
            android:id="@+id/autoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dip"
            android:button="@drawable/checkbox_selector"
            android:text="@string/autologin"
            android:textColor="#000000" />
    </RelativeLayout>

    <!--
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/copyright"
            android:textStyle="bold"
            android:visibility="visible" />
    </RelativeLayout>
    -->

</LinearLayout>